[project]
name = "lexman-ble"
version = "0.1.1"
description = "Lexman CCT Smart Bulb control through bluetooth in Python"
authors = [{name = "David Freire", email = "davidsmfreire@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12.0,<3.13"
dependencies = [
    "bleak-retry-connector>=2.3.0",
    "bleak>=0.19.0",
    "parse~=1.20.2",
    "bluetooth-data-tools==1.20.0"
]

[tool.uv]
default-groups = "all"

[dependency-groups]
ha = [
    "homeassistant>=2024.1.1",
]
dev = [
    "pre-commit >=4.0.1",
    "ruff >=0.8.3",
    "mypy >=1.13.0",
    "isort >=5.13.2",
    "black >=24.10.0",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
exclude_commit_patterns = [
    '''deps(?:\([^)]*?\))?: .+''',
]
